--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "body-parser": "^1.14.1",
+    "cities": "^1.1.2",
     "express": "^4.13.1",
     "forever": "^0.15.1",
-    "nodemon": "^1.3.7"
+    "nodemon": "^1.3.7",
+    "yelp": "^1.0.1"
   },
   "devDependencies": {
     "chai": "^3.4.0",
