--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
+    "bluebird": "^3.3.1",
     "body-parser": "^1.14.1",
     "cities": "^1.1.2",
     "express": "^4.13.1",
     "forever": "^0.15.1",
+    "node-yelp": "0.0.3",
     "nodemon": "^1.3.7",
     "yelp": "^1.0.1"
   },
